# learn-will-a-haskell

./: .gitignore  README.md
ex0/: helloworld  helloworld.hi
ex1/: inc-file  inc-file.hi  inc-file.hs
ex2/: README.md
ex2/tcp-echo/: tcp-echo.cabal
ex2/tcp-echo/app/: Main.hs
ex2/tcp-echo/src/: Lib.hs
ex3/: README.md  exercises.hs
ex4/: tree.hs
